--- a/KitKatEmoji/build.gradle
+++ b/KitKatEmoji/build.gradle
@@ -3,19 +3,24 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 21
     buildToolsVersion '21.1.2'
+
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 21
-        versionCode 1
-        versionName '1.0'
+        versionCode 100
+        versionName '1.0.0'
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
-    }
-    productFlavors {
     }
 }
 
@@ -23,3 +28,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:support-v4:21.0.3'
 }
+
+apply from: '../gradle-mvn-push.gradle'
