--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,18 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+VERSION_NAME=1.0.0-SNAPSHOT
+VERSION_CODE=100
+GROUP=com.github.crossle.kitkatemoji
+
+POM_DESCRIPTION=Android KitKat emoji
+POM_URL=https://github.com/crossle/KitKatEmoji
+POM_SCM_URL=https://github.com/crossle/KitKatEmoji
+POM_SCM_CONNECTION=scm:git@github.com:crossle/KitKatEmoji.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:crossle/KitKatEmoji.git
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=crossle
+POM_DEVELOPER_NAME=Crossle Song
